Actions
Bug #13131
closedlibc: _fgetwc_unlocked_l() warn: was '== &fp->_state' instead of '='
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../port/locale/fgetwc.c:62 _fgetwc_unlocked_l() warn: was '== &fp->_state' instead of '='
Testing done: build/install/boot
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 89abd63ca1d1795943e51095a12ea5ce6e035e88
commit 89abd63ca1d1795943e51095a12ea5ce6e035e88 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-22T14:10:37.000Z 13131 libc: _fgetwc_unlocked_l() warn: was '== &fp->_state' instead of '=' Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions