13131 libc: _fgetwc_unlocked_l() warn: was '== &fp->_state' instead of '=' Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>