usr/src/lib/libc/port/locale/fgetwc.c
@@ -59,7 +59,8 @@ _fgetwc_unlocked_l(FILE *fp, locale_t loc)
 		/* Fast path for single-byte encodings. */
 		return ((wint_t)c);
 	}
-	if ((statep = _getmbstate(fp)) == NULL) {
+	statep = _getmbstate(fp);
+	if (statep == NULL) {
 		fp->_flag = _IOERR;
 		errno = EBADF;
 		return (WEOF);
